@@ -1168,14 +1168,16 @@ DataLink::target_intersection(const RepoId& pub_id, const GUIDSeq& in,
   GUIDSeq_var res;
   GuardType guard(this->pub_map_lock_);
   ReceiveListenerSet_rch rlset = this->pub_map_.find(pub_id);
-  n_subs = rlset->map().size();
-  const CORBA::ULong len = in.length();
-  for (CORBA::ULong i(0); i < len; ++i) {
-    if (rlset->exist(in[i])) {
-      if (res.ptr() == 0) {
-        res = new GUIDSeq;
+  if (!rlset.is_nil()) {
+    n_subs = rlset->map().size();
+    const CORBA::ULong len = in.length();
+    for (CORBA::ULong i(0); i < len; ++i) {
+      if (rlset->exist(in[i])) {
+        if (res.ptr() == 0) {
+          res = new GUIDSeq;
+        }
+        push_back(res.inout(), in[i]);
       }
-      push_back(res.inout(), in[i]);
     }
   }
   return res._retn();
