@@ -1,3 +1,10 @@
+Fri Sep  5 16:25:41 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
+
+        * dds/DCPS/transport/framework/DataLink.cpp:
+
+          Check for nil result from pub_map_.find() in
+          DataLink::target_intersection().
+
 Sun Aug 31 17:54:04 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
 
         * dds/DCPS/DataCollector_T.cpp:
